feat(index.html): add About Us, Featured Products, Services, and Testimonials sections with content and styling

--- a/index.html
+++ b/index.html
@@ -907,6 +907,103 @@
     </section>
 
 
+    <!-- About Us Section -->
+    <section id="about" class="section fade-in">
+        <div class="container">
+            <h2 class="section-title">Selamat Datang di Peternakan Polije</h2>
+            <p class="section-subtitle">Inovasi, Edukasi, dan Kualitas dalam Satu Atap</p>
+            <div class="about-content">
+                <div class="about-image">
+                    <img src="https://placehold.co/600x400/2c5530/ffffff?text=Sapi+Perah" alt="Sapi Perah di Peternakan Polije">
+                </div>
+                <div class="about-text">
+                    <h3>Tentang Kami</h3>
+                    <p>Sebagai Teaching Factory (TEFA) Politeknik Negeri Jember, kami mengintegrasikan pendidikan vokasi dengan praktik industri peternakan modern. Kami tidak hanya menghasilkan produk sapi perah dan potong berkualitas tinggi, tetapi juga
+                        menjadi pusat pembelajaran inovatif bagi mahasiswa.</p>
+                    <p>Dengan fasilitas canggih dan didukung oleh para ahli, kami berkomitmen untuk memajukan sektor peternakan lokal melalui riset, teknologi, dan pemberdayaan masyarakat.</p>
+                    <a href="about.html" class="cta-button">Jelajahi Lebih Jauh</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Featured Products Section -->
+    <section id="products" class="section products fade-in" style="background-color: var(--bg-light);">
+        <div class="container">
+            <h2 class="section-title">Produk Unggulan Kami</h2>
+            <p class="section-subtitle">Hasil dari peternakan modern yang mengutamakan kualitas dan kesejahteraan ternak.</p>
+            <div class="products-grid">
+                <div class="product-card">
+                    <div class="product-icon"><i class="fas fa-cheese"></i></div>
+                    <h3>Susu Sapi Segar</h3>
+                    <p>Susu murni pasteurisasi langsung dari peternakan kami, kaya nutrisi dan rasa.</p>
+                </div>
+                <div class="product-card">
+                    <div class="product-icon"><i class="fas fa-drumstick-bite"></i></div>
+                    <h3>Daging Sapi Potong</h3>
+                    <p>Daging sapi berkualitas premium dari ternak yang dirawat dengan standar tertinggi.</p>
+                </div>
+                <div class="product-card">
+                    <div class="product-icon"><i class="fas fa-seedling"></i></div>
+                    <h3>Pupuk Organik</h3>
+                    <p>Pupuk kompos berkualitas dari limbah peternakan untuk kesuburan tanah Anda.</p>
+                </div>
+            </div>
+            <div style="text-align: center; margin-top: 3rem;">
+                <a href="products.html" class="cta-button">Lihat Semua Produk</a>
+            </div>
+        </div>
+    </section>
+
+    <!-- Services Section -->
+    <section id="services" class="section services fade-in">
+        <div class="container">
+            <h2 class="section-title">Layanan & Program</h2>
+            <p class="section-subtitle">Kami lebih dari sekadar peternakan. Kami adalah pusat edukasi dan inovasi.</p>
+            <div class="services-grid">
+                <div class="service-card">
+                    <div class="service-icon"><i class="fas fa-user-graduate"></i></div>
+                    <h3>Praktik Mahasiswa</h3>
+                    <p>Menyediakan pengalaman belajar langsung di industri peternakan bagi mahasiswa Polije.</p>
+                </div>
+                <div class="service-card">
+                    <div class="service-icon"><i class="fas fa-flask"></i></div>
+                    <h3>Riset & Inovasi</h3>
+                    <p>Pusat penelitian terapan untuk meningkatkan produktivitas dan keberlanjutan peternakan.</p>
+                </div>
+                <div class="service-card">
+                    <div class="service-icon"><i class="fas fa-handshake"></i></div>
+                    <h3>Kemitraan Industri</h3>
+                    <p>Bekerja sama dengan industri dan peternak lokal untuk transfer teknologi dan pengetahuan.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Testimonial Section -->
+    <section id="testimonial" class="section fade-in" style="background-color: var(--bg-light);">
+        <div class="container">
+            <h2 class="section-title">Apa Kata Mereka</h2>
+            <p class="section-subtitle">Kami bangga dapat memberikan dampak positif bagi mahasiswa dan mitra kami.</p>
+            <div class="products-grid">
+                <!-- Menggunakan style yang sama dengan product grid -->
+                <div class="product-card">
+                    <p>"Pengalaman magang di TEFA Peternakan Polije sangat luar biasa. Saya belajar banyak tentang manajemen peternakan modern."</p>
+                    <h4 style="margin-top: 1rem; color: var(--primary-color);">- Budi, Mahasiswa</h4>
+                </div>
+                <div class="product-card">
+                    <p>"Kualitas susu dari Peternakan Polije selalu terjamin kesegarannya. Sangat direkomendasikan untuk keluarga."</p>
+                    <h4 style="margin-top: 1rem; color: var(--primary-color);">- Ibu Ani, Pelanggan</h4>
+                </div>
+                <div class="product-card">
+                    <p>"Kerja sama riset dengan Peternakan Polije membantu kami mengembangkan pakan ternak yang lebih efisien dan bergizi."</p>
+                    <h4 style="margin-top: 1rem; color: var(--primary-color);">- Dr. Santoso, Mitra Industri</h4>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
     <!-- Footer -->
     <footer class="footer">
         <div class="footer-container">
