Add Kerja Sama page with responsive design and interactive elements

--- a/about.html
+++ b/about.html
@@ -348,7 +348,8 @@
         /* Responsive Design */
         
         @media (max-width: 992px) {
-            .about-content {
+            .about-content,
+            .student-info-grid {
                 grid-template-columns: 1fr;
                 gap: 3rem;
             }
@@ -451,11 +452,11 @@
             <ul class="nav-menu" id="nav-menu">
                 <li><a href="index.html" class="nav-link">Beranda</a></li>
                 <li><a href="about.html" class="nav-link active">Tentang</a></li>
-                <li><a href="products.html" class="nav-link">Produk</a></li>
-                <li><a href="services.html" class="nav-link">Layanan</a></li>
+                <li><a href="products.html" class="nav-link">Produk & Layanan</a></li>
+                <li><a href="facilities.html" class="nav-link">Fasilitas</a></li>
                 <li><a href="gallery.html" class="nav-link">Galeri</a></li>
-                <li><a href="faq.html" class="nav-link">FAQ</a></li>
-                <li><a href="contact.html" class="nav-link">Kontak</a></li>
+                <li><a href="akademis.html" class="nav-link">Akademis</a></li>
+                <li><a href="kerjasama.html" class="nav-link">Kerja Sama</a></li>
             </ul>
             <div class="hamburger" id="hamburger">
                 <span></span>
@@ -474,9 +475,13 @@
 
                 <div class="about-content">
                     <div class="about-text fade-in">
-                        <h3>Sejarah & Visi Kami</h3>
-                        <p>Berawal dari inisiatif Jurusan Peternakan Politeknik Negeri Jember, peternakan kami berkembang menjadi Teaching Factory terintegrasi yang menjadi pusat pembelajaran, riset, dan produksi.</p>
-                        <p>Kami berkomitmen pada pendidikan, pemberdayaan masyarakat, dan penyediaan produk peternakan berkualitas. Dengan kapasitas 30-40 ekor sapi per siklus dan fasilitas modern, kami menjadi laboratorium hidup bagi mahasiswa.</p>
+                        <h3>Tentang Peternakan Polije</h3>
+                        <p><strong>Sejarah & Tujuan Awal:</strong> Peternakan sapi perah dan potong ini dibangun atas inisiatif Jurusan Peternakan Politeknik Negeri Jember. Awalnya hanya ditujukan untuk mendukung kegiatan akademik mahasiswa, lalu berkembang
+                            menjadi Teaching Factory (Tefa) yang menggabungkan fungsi pendidikan dan unit bisnis.</p>
+                        <p><strong>Visi & Misi:</strong> Selain fokus pada produksi dan bisnis, peternakan berperan penting sebagai sarana pembelajaran, penelitian, dan pengabdian masyarakat. Harapannya bisa menciptakan manfaat langsung ke masyarakat, termasuk
+                            membuka lapangan kerja.</p>
+                        <p><strong>Teaching Factory (Tefa):</strong> Sebagai Tefa, kami tidak hanya berfungsi sebagai unit bisnis, tetapi juga menjadi sarana pembelajaran, penelitian, dan pengabdian masyarakat. Dengan kapasitas kandang 30-40 ekor sapi, kami
+                            menjadi laboratorium hidup bagi mahasiswa untuk belajar dan berpraktik langsung di lapangan.</p>
                     </div>
                     <div class="about-image fade-in">
                         <img src="https://images.unsplash.com/photo-1544966503-7cc4bbbc0f4a?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1000&q=80" alt="Peternakan Modern">
@@ -502,19 +507,16 @@
                 <h4>Jelajahi</h4>
                 <ul>
                     <li><a href="about.html">Tentang Kami</a></li>
-                    <li><a href="products.html">Produk</a></li>
-                    <li><a href="services.html">Layanan</a></li>
+                    <li><a href="products.html">Produk & Layanan</a></li>
+                    <li><a href="facilities.html">Fasilitas</a></li>
                     <li><a href="gallery.html">Galeri</a></li>
-                    <li><a href="faq.html">FAQ</a></li>
                 </ul>
             </div>
             <div class="footer-services">
-                <h4>Layanan</h4>
+                <h4>Program</h4>
                 <ul>
-                    <li><a href="#">Praktik Mahasiswa</a></li>
-                    <li><a href="#">Riset & Inovasi</a></li>
-                    <li><a href="#">Fasilitas Modern</a></li>
-                    <li><a href="#">Kerjasama Strategis</a></li>
+                    <li><a href="mahasiswa.html">Info Mahasiswa</a></li>
+                    <li><a href="pemasaran.html">Pemasaran</a></li>
                 </ul>
             </div>
             <div class="footer-contact">
