--- a/gallery.html
+++ b/gallery.html
@@ -415,6 +415,12 @@
         }
         /* Responsive Design */
         
+        @media (max-width: 992px) {
+            .gallery-grid {
+                grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+            }
+        }
+        
         @media (max-width: 768px) {
             .nav-menu {
                 display: none;
@@ -509,11 +515,11 @@
             <ul class="nav-menu" id="nav-menu">
                 <li><a href="index.html" class="nav-link">Beranda</a></li>
                 <li><a href="about.html" class="nav-link">Tentang</a></li>
-                <li><a href="products.html" class="nav-link">Produk</a></li>
-                <li><a href="services.html" class="nav-link">Layanan</a></li>
+                <li><a href="products.html" class="nav-link">Produk & Layanan</a></li>
+                <li><a href="facilities.html" class="nav-link">Fasilitas</a></li>
                 <li><a href="gallery.html" class="nav-link active">Galeri</a></li>
-                <li><a href="faq.html" class="nav-link">FAQ</a></li>
-                <li><a href="contact.html" class="nav-link">Kontak</a></li>
+                <li><a href="akademis.html" class="nav-link">Akademis</a></li>
+                <li><a href="kerjasama.html" class="nav-link">Kerja Sama</a></li>
             </ul>
             <div class="hamburger" id="hamburger">
                 <span></span>
@@ -577,19 +583,17 @@
                 <h4>Jelajahi</h4>
                 <ul>
                     <li><a href="about.html">Tentang Kami</a></li>
-                    <li><a href="products.html">Produk</a></li>
-                    <li><a href="services.html">Layanan</a></li>
+                    <li><a href="products.html">Produk & Layanan</a></li>
+                    <li><a href="facilities.html">Fasilitas</a></li>
                     <li><a href="gallery.html">Galeri</a></li>
-                    <li><a href="faq.html">FAQ</a></li>
+                    <li><a href="mahasiswa.html">Mahasiswa</a></li>
+                    <li><a href="pemasaran.html">Pemasaran</a></li>
                 </ul>
             </div>
             <div class="footer-services">
-                <h4>Layanan</h4>
+                <h4>Program</h4>
                 <ul>
-                    <li><a href="#">Praktik Mahasiswa</a></li>
-                    <li><a href="#">Riset & Inovasi</a></li>
-                    <li><a href="#">Fasilitas Modern</a></li>
-                    <li><a href="#">Kerjasama Strategis</a></li>
+                    <li><a href="mahasiswa.html">Info Mahasiswa</a></li>
                 </ul>
             </div>
             <div class="footer-contact">
