fix(products.html): remove inline styles from products grid for better responsiveness

--- a/products.html
+++ b/products.html
@@ -507,7 +507,7 @@
             <div class="container">
                 <h2 class="section-title fade-in">Produk Kami</h2>
                 <p class="section-subtitle fade-in">Kualitas terbaik dari peternakan yang dikelola secara profesional dan edukatif.</p>
-                <div class="products-grid" style="grid-template-columns: repeat(2, 1fr); max-width: 800px; margin: 0 auto;">
+                <div class="products-grid">
                     <div class="product-card fade-in">
                         <div class="product-icon">
                             <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12.22 2h-.44a2 2 0 0 0-2 2v11a2 2 0 0 0 2 2h.44a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2z"></path><path d="M18.36 6.64a9 9 0 0 1-12.73 0"></path><path d="M21.17 9.46a5 5 0 0 1-7.07 0"></path></svg>
@@ -539,7 +539,7 @@
             <div class="container">
                 <h2 class="section-title fade-in">Layanan Kami</h2>
                 <p class="section-subtitle fade-in">Didukung oleh program layanan yang inovatif.</p>
-                <div class="products-grid" style="grid-template-columns: repeat(2, 1fr); max-width: 800px; margin: 0 auto;">
+                <div class="products-grid">
                     <div class="product-card fade-in">
                         <div class="product-icon"><i class="fas fa-user-graduate"></i></div>
                         <h3>Praktik Mahasiswa</h3>
