fix: update footer links to use shortened names and remove unnecessary items

--- a/kerjasama.html
+++ b/kerjasama.html
@@ -479,18 +479,12 @@
             <div class="footer-links">
                 <h4>Jelajahi</h4>
                 <ul>
-                    <li><a href="about.html">Tentang Kami</a></li>
+                    <li><a href="about.html">Tentang</a></li>
                     <li><a href="products.html">Produk & Layanan</a></li>
                     <li><a href="facilities.html">Fasilitas</a></li>
                     <li><a href="gallery.html">Galeri</a></li>
-                    <li><a href="mahasiswa.html">Mahasiswa</a></li>
-                    <li><a href="pemasaran.html">Pemasaran</a></li>
-                </ul>
-            </div>
-            <div class="footer-services">
-                <h4>Program</h4>
-                <ul>
-                    <li><a href="mahasiswa.html">Info Mahasiswa</a></li>
+                    <li><a href="akademis.html">Akademis</a></li>
+                    <li><a href="kerjasama.html">Kerja Sama</a></li>
                 </ul>
             </div>
             <div class="footer-contact">
