--- a/index.html
+++ b/index.html
@@ -389,7 +389,20 @@
             display: grid;
             grid-template-columns: 1fr 1fr;
             gap: 4rem;
-            align-items: flex-start;
+            align-items: center; /* Mengubah align-items untuk tata letak yang lebih baik */
+        }
+
+        .contact-map {
+            height: 500px; /* Menetapkan tinggi peta */
+            border-radius: 15px;
+            overflow: hidden;
+            box-shadow: 0 10px 20px rgba(0,0,0,0.1);
+        }
+
+        .contact-map iframe {
+            width: 100%;
+            height: 100%;
+            border: 0;
         }
         
         .contact-item {
@@ -1048,45 +1061,50 @@
             <h2 class="section-title">Hubungi Kami</h2>
             <p class="section-subtitle">Mari berkolaborasi untuk kemajuan peternakan dan pendidikan di Indonesia.</p>
             <div class="contact-content">
-                <div class="contact-info">
-                    <div class="contact-item">
-                        <div class="contact-icon"><i class="fas fa-map-marker-alt"></i></div>
-                        <div>
-                            <h4>Alamat</h4>
-                            <p>UPT Pengembangan Pertanian Terpadu, Politeknik Negeri Jember<br>Jl. Mastrip No. 59, Jember, Jawa Timur</p>
+                <div class="contact-details">
+                    <div class="contact-info">
+                        <div class="contact-item">
+                            <div class="contact-icon"><i class="fas fa-map-marker-alt"></i></div>
+                            <div>
+                                <h4>Alamat</h4>
+                                <p>UPT Pengembangan Pertanian Terpadu, Politeknik Negeri Jember<br>Jl. Mastrip No. 59, Jember, Jawa Timur</p>
+                            </div>
+                        </div>
+                        <div class="contact-item">
+                            <div class="contact-icon"><i class="fas fa-phone"></i></div>
+                            <div>
+                                <h4>Telepon</h4>
+                                <p>+62 331 333 1234</p>
+                            </div>
+                        </div>
+                        <div class="contact-item">
+                            <div class="contact-icon"><i class="fas fa-envelope"></i></div>
+                            <div>
+                                <h4>Email</h4>
+                                <p>peternakan@polije.ac.id</p>
+                            </div>
                         </div>
                     </div>
-                    <div class="contact-item">
-                        <div class="contact-icon"><i class="fas fa-phone"></i></div>
-                        <div>
-                            <h4>Telepon</h4>
-                            <p>+62 331 333 1234</p>
-                        </div>
-                    </div>
-                    <div class="contact-item">
-                        <div class="contact-icon"><i class="fas fa-envelope"></i></div>
-                        <div>
-                            <h4>Email</h4>
-                            <p>peternakan@polije.ac.id</p>
-                        </div>
+                    <div class="contact-form">
+                        <form>
+                            <div class="form-group">
+                                <input type="text" id="name" name="name" placeholder=" " required>
+                                <label for="name">Nama Lengkap</label>
+                            </div>
+                            <div class="form-group">
+                                <input type="email" id="email" name="email" placeholder=" " required>
+                                <label for="email">Email</label>
+                            </div>
+                            <div class="form-group">
+                                <textarea id="message" name="message" rows="5" placeholder=" " required></textarea>
+                                <label for="message">Pesan</label>
+                            </div>
+                            <button type="submit" class="submit-btn">Kirim Pesan</button>
+                        </form>
                     </div>
                 </div>
-                <div class="contact-form">
-                    <form>
-                        <div class="form-group">
-                            <input type="text" id="name" name="name" placeholder=" " required>
-                            <label for="name">Nama Lengkap</label>
-                        </div>
-                        <div class="form-group">
-                            <input type="email" id="email" name="email" placeholder=" " required>
-                            <label for="email">Email</label>
-                        </div>
-                        <div class="form-group">
-                            <textarea id="message" name="message" rows="5" placeholder=" " required></textarea>
-                            <label for="message">Pesan</label>
-                        </div>
-                        <button type="submit" class="submit-btn">Kirim Pesan</button>
-                    </form>
+                <div class="contact-map">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3949.399399961985!2d113.72099831478048!3d-8.16262399412387!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dd695b617d8f6ff%3A0x1f86335934a8525!2sPoliteknik%20Negeri%20Jember!5e0!3m2!1sen!2sid!4v1678886738521!5m2!1sen!2sid" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>
         </div>
@@ -1316,4 +1334,5 @@
     </script>
 </body>
 
+</html>
 </html>
