--- a/akademis.html
+++ b/akademis.html
@@ -640,13 +640,17 @@
             });
 
             // Dropdown menu for mobile
-            const dropdowns = document.querySelectorAll('.dropdown');
+            const dropdowns = document.querySelectorAll('.nav-menu .dropdown');
             dropdowns.forEach(dropdown => {
                 const link = dropdown.querySelector('a');
-                link.addEventListener('click', function(e) {
-                    if (window.innerWidth <= 768 && this.nextElementSibling.classList.contains('dropdown-menu')) {
+                const icon = link.querySelector('i');
+
+                icon.addEventListener('click', function(e) {
+                    if (window.innerWidth <= 768) {
                         e.preventDefault();
-                        this.nextElementSibling.style.display = this.nextElementSibling.style.display === 'block' ? 'none' : 'block';
+                        e.stopPropagation();
+                        const dropdownMenu = link.nextElementSibling;
+                        dropdownMenu.style.display = dropdownMenu.style.display === 'block' ? 'none' : 'block';
                     }
                 });
             });
