--- a/index.html
+++ b/index.html
@@ -1269,13 +1269,13 @@
             });
 
             // Dropdown menu for mobile
-            const dropdowns = document.querySelectorAll('.dropdown');
-            dropdowns.forEach(dropdown => {
-                const link = dropdown.querySelector('a');
-                link.addEventListener('click', function(e) {
-                    if (window.innerWidth <= 768 && this.nextElementSibling.classList.contains('dropdown-menu')) {
+            const dropdowns = document.querySelectorAll('.nav-menu .dropdown > a');
+            dropdowns.forEach(dropdownLink => {
+                dropdownLink.addEventListener('click', function(e) {
+                    if (window.innerWidth <= 768) {
                         e.preventDefault();
-                        this.nextElementSibling.style.display = this.nextElementSibling.style.display === 'block' ? 'none' : 'block';
+                        const dropdownMenu = this.nextElementSibling;
+                        dropdownMenu.style.display = dropdownMenu.style.display === 'block' ? 'none' : 'block';
                     }
                 });
             });
