--- a/akademis.html
+++ b/akademis.html
@@ -639,18 +639,25 @@
                 });
             });
 
-            // Dropdown menu for mobile
-            const dropdowns = document.querySelectorAll('.nav-menu .dropdown');
-            dropdowns.forEach(dropdown => {
-                const link = dropdown.querySelector('a');
-                const icon = link.querySelector('i');
+            // Mobile Menu Logic
+            document.querySelectorAll('.nav-menu a').forEach(link => {
+                link.addEventListener('click', (e) => {
+                    const isDropdownToggle = link.parentElement.classList.contains('dropdown') && window.innerWidth <= 768;
 
-                icon.addEventListener('click', function(e) {
-                    if (window.innerWidth <= 768) {
+                    if (isDropdownToggle) {
                         e.preventDefault();
-                        e.stopPropagation();
                         const dropdownMenu = link.nextElementSibling;
-                        dropdownMenu.style.display = dropdownMenu.style.display === 'block' ? 'none' : 'block';
+                        const icon = link.querySelector('i');
+                        const isVisible = dropdownMenu.style.display === 'block';
+
+                        dropdownMenu.style.display = isVisible ? 'none' : 'block';
+                        if (icon) {
+                            icon.style.transform = isVisible ? 'rotate(0deg)' : 'rotate(180deg)';
+                        }
+                    } else if (navMenu.classList.contains('mobile-active')) {
+                        hamburger.classList.remove('active');
+                        navMenu.classList.remove('mobile-active');
+                        document.body.style.overflow = '';
                     }
                 });
             });
