--- a/contact.html
+++ b/contact.html
@@ -723,23 +723,25 @@
                 document.body.style.overflow = navMenu.classList.contains('mobile-active') ? 'hidden' : '';
             });
 
-            document.querySelectorAll('.nav-link').forEach(link => {
-                link.addEventListener('click', () => {
-                    if (navMenu.classList.contains('mobile-active')) {
+            // Mobile Menu Logic
+            document.querySelectorAll('.nav-menu a').forEach(link => {
+                link.addEventListener('click', (e) => {
+                    const isDropdownToggle = link.parentElement.classList.contains('dropdown') && window.innerWidth <= 768;
+
+                    if (isDropdownToggle) {
+                        e.preventDefault();
+                        const dropdownMenu = link.nextElementSibling;
+                        const icon = link.querySelector('i');
+                        const isVisible = dropdownMenu.style.display === 'block';
+
+                        dropdownMenu.style.display = isVisible ? 'none' : 'block';
+                        if (icon) {
+                            icon.style.transform = isVisible ? 'rotate(0deg)' : 'rotate(180deg)';
+                        }
+                    } else if (navMenu.classList.contains('mobile-active')) {
                         hamburger.classList.remove('active');
                         navMenu.classList.remove('mobile-active');
                         document.body.style.overflow = '';
-                    }
-                });
-            });
-
-            const dropdowns = document.querySelectorAll('.nav-menu .dropdown > a');
-            dropdowns.forEach(dropdownLink => {
-                dropdownLink.addEventListener('click', function(e) {
-                    if (window.innerWidth <= 768) {
-                        e.preventDefault();
-                        const dropdownMenu = this.nextElementSibling;
-                        dropdownMenu.style.display = dropdownMenu.style.display === 'block' ? 'none' : 'block';
                     }
                 });
             });
