--- a/products.html
+++ b/products.html
@@ -722,13 +722,27 @@
             });
 
             // Dropdown menu for mobile
-            const dropdowns = document.querySelectorAll('.nav-menu .dropdown > a');
-            dropdowns.forEach(dropdownLink => {
-                dropdownLink.addEventListener('click', function(e) {
-                    if (window.innerWidth <= 768) {
+            // Mobile Menu Logic
+            // Mobile Menu Logic
+            // Mobile Menu Logic
+            document.querySelectorAll('.nav-menu a').forEach(link => {
+                link.addEventListener('click', (e) => {
+                    const isDropdownToggle = link.parentElement.classList.contains('dropdown') && window.innerWidth <= 768;
+
+                    if (isDropdownToggle) {
                         e.preventDefault();
-                        const dropdownMenu = this.nextElementSibling;
-                        dropdownMenu.style.display = dropdownMenu.style.display === 'block' ? 'none' : 'block';
+                        const dropdownMenu = link.nextElementSibling;
+                        const icon = link.querySelector('i');
+                        const isVisible = dropdownMenu.style.display === 'block';
+
+                        dropdownMenu.style.display = isVisible ? 'none' : 'block';
+                        if (icon) {
+                            icon.style.transform = isVisible ? 'rotate(0deg)' : 'rotate(180deg)';
+                        }
+                    } else if (navMenu.classList.contains('mobile-active')) {
+                        hamburger.classList.remove('active');
+                        navMenu.classList.remove('mobile-active');
+                        document.body.style.overflow = '';
                     }
                 });
             });
